SwanHub/swanhub/static/css/style.less
@import "lesshat/lesshat";
@import "vars";
@import url("icons.css");


@font-face {
    font-family: 'Roboto';
    font-style: normal;
    font-weight: 300;
    src:
        local('Roboto Light'), 
        url(fonts/Roboto-300.ttf) format('truetype');
  }
@font-face {
    font-family: 'Roboto';
    font-style: normal;
    font-weight: 400;
    src:
        local('Roboto'), 
         url(fonts/Roboto-400.ttf) format('truetype');
}
  
html {
    position: relative;
    min-height: 100%;
}

body {
    margin-bottom: @footer-height;
    position: static;
}

#site {
    height: auto !important;
    overflow: visible;
}

a,
a:active,
a:focus {
    text-decoration: none;
}

.h-mixin {
    color: @color-primary;
    font-family: @font_family_1;

    a:hover {
        text-decoration: none;
    }
}

.h1-mixin {
    .h-mixin();
    font-weight: 400;
    font-size: @size-1;
}

h1 {
    .h1-mixin();

    i {
        line-height: @size-1;

        &:before {
            font-size: @size-1 / 2 !important;
            margin-left: 10px;
            vertical-align: middle !important;
        }
    }
}

.h2() {
    .h-mixin();
    font-weight: 300;
    font-size: @size-2;

    i {
        line-height: @size-2;

        &:before {
            font-size: @size-2 / 2 !important;
            margin-left: 10px;
            vertical-align: middle !important;
        }
    }
}

h2 {
    .h2();
}

h3 {
    .h-mixin();
    font-weight: 300;
    font-size: @size-4;
    margin-top: 0;
}

h4 {
    font-weight: bold;
    font-size: @size-5;
}

p {
    margin-bottom: 5px;
}

#notebook h1,
#notebook h2,
#notebook h3 {
    color: black;
}

.btn-primary {
    background-color: @color-primary;
}

input[type="checkbox"].form-control {
    appearance: checkbox;
}

header {
    background-color: @header-background;
    border-bottom: solid @header-border @color-primary;
    font-family: @font_family_1;
    font-weight: 300;
    color: @menu-color;
    width: 100%;

    #menu {
        display: table;
        width: 100%;

        @media (min-width: 992px) {
            height: @header-height;
        }

        ul {
            margin: 0;
            border-bottom: none;
            display: table-cell;
            text-align: center;
            vertical-align: bottom;

            li {
                float: none;
                display: inline-block;
                margin-bottom: -@header-border;

                a {
                    padding: 10px 20px;
                    margin-left: 3px;
                    margin-right: 3px;
                    border-width: 0 0 @menu-border-size 0;
                    color: @menu-color;
                    background-color: transparent;

                    i {
                        margin-right: 10px;
                        opacity: 0;
                        .transition(all .5s);
                        position: absolute;
                        left: 12px;
                        padding-top: 5px;
                    }

                    .text {
                        .transition(all .5s);
                        position: relative;
                        left: 0;
                        font-size: @menu-font-size;
                    }

                    &:hover {
                        border-color: @color-secondary;
                        background-color: transparent;
                    }
                }

                &:hover,
                &.active {

                    a,
                    a:hover,
                    a:focus {
                        color: @color-secondary;
                        background-color: transparent;
                        border-color: @color-secondary;
                        cursor: pointer;
                    }

                    i {
                        opacity: 1;
                    }

                    .text {
                        left: 10px;
                    }
                }
            }
        }
    }

    #buttons-right-wrapper {
        height: @header-height;
        position: relative;

        #buttons-right {
            margin: auto;
            position: absolute;
            top: 0;
            bottom: 0;
            right: 0;
            height: 36px;

            button {
                background-color: transparent;
                color: @menu-color;
                border: 0;
                font-size: 23px;
                margin-left: 10px;
                outline: none;

                &#new-terminal i {
                    font-weight: 900;
                }
            }

            .btn-group.open .dropdown-toggle {
                box-shadow: none;
            }
        }
    }

    #jupyterhub-logo {
        height: @header-height;
        padding: 0;

        img {
            height: 38px;
            margin: auto;
            position: absolute;
            top: 0;
            bottom: 0;
        }
    }

    #header-container .row span > a {
        display: none;
    }
}

#tab_content {
    padding-top: 0;
}

#tree,
#share,
#normal-page {
    padding-top: 20px;
}
/* ... */

